<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/clRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".main.HomeActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin">

                <ImageView
                    android:id="@+id/imgSearch"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@drawable/bg_white_circle"
                    android:elevation="@dimen/_8sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_menu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtGreet"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/menu" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end">

                    <ImageView
                        android:id="@+id/likes"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/bg_white_circle"
                        android:elevation="@dimen/_8sdp"
                        android:padding="@dimen/_3sdp"
                        android:src="@drawable/ic_likes"
                        android:contentDescription="@string/likes" />


                    <RelativeLayout
                        android:layout_width="@dimen/_56sdp"
                        android:layout_height="@dimen/_42sdp"
                        android:layout_gravity="center_vertical">

                        <ImageView
                            android:id="@+id/notoif"
                            android:layout_width="@dimen/_32sdp"
                            android:layout_height="@dimen/_32sdp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="end"
                            android:background="@drawable/bg_white_circle"
                            android:elevation="@dimen/_8sdp"
                            android:padding="@dimen/_8sdp"
                            android:src="@drawable/ic_notifcations"
                            android:contentDescription="@string/notif"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/txtBadgeNotification"
                            android:layout_width="@dimen/_14sdp"
                            android:layout_height="@dimen/_14sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:background="@drawable/red_dot"
                            android:elevation="@dimen/_12sdp"
                            android:gravity="center"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="@dimen/_8sdp" />

                    </RelativeLayout>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:elevation="@dimen/_8sdp"
                        android:src="@mipmap/prof_pic"
                        app:civ_border_color="#fff"
                        app:civ_border_width="2dp" />


                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_40sdp"
            app:defaultNavHost="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@id/bottomAppBar"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:navGraph="@navigation/mobile_navigation" />


        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="10dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                app:menu="@menu/bottom_nav_menu" />

        </com.google.android.material.bottomappbar.BottomAppBar>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addfab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:onClick="updateMenuPopupVisibility"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_anchor="@id/bottomAppBar"
            app:tint="@color/white" />


        <LinearLayout
            android:id="@+id/llFabPopup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:gravity="bottom|center"
            android:onClick="updateMenuPopupVisibility"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/addfab">

            <include layout="@layout/layout_add_popup" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
