<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:elevation="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtActOrders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_magenta_card"
                android:gravity="center"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingBottom="@dimen/_20sdp"
                android:text=""
                android:elevation="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNewCustomers"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:elevation="@dimen/_10sdp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_card_stack_list"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="@dimen/_8sdp">

            <RelativeLayout
                android:id="@+id/txtActiveSubs"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_white_card"
                android:elevation="@dimen/_8sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:gravity="center"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text=""
                    android:textColor="#2C3D63"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:id="@+id/txtGrowth"/>

                <ImageView
                    android:id="@+id/imgChart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:scaleType="fitEnd"
                    android:src="@mipmap/chart"
                    android:contentDescription="@string/chart" />

                <ImageView
                    android:id="@+id/imgArrowUp"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_above="@+id/imgChart"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:src="@mipmap/arrow_up"
                    android:contentDescription="@string/arrow_up" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtActiveSubs"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtActiveCust"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_60sdp"
                    android:background="@drawable/bg_white_card"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text=""
                    android:textColor="#2C3D63"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:elevation="@dimen/_8sdp"
                    android:textSize="@dimen/_10sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvActCustomers"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:elevation="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_card_stack_list"
                    />

            </RelativeLayout>


        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/bg_green_card"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgOrders"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:elevation="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:src="@mipmap/customers_image"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10ssp"
                    android:background="@drawable/bg_magenta_card"
                    android:gravity="center"
                    android:elevation="@dimen/_8sdp"
                    android:text="@string/view_cust"
                    android:textAllCaps="false"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />
            </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>